--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://andreispurim.github.io/lonely_monday/"
+baseURL = "https://lonelymonday.github.io"
 languageCode = "en-us"
 title = "Rascunhos do Andreis"
 summaryLength = "20"
