--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -7,30 +7,25 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1                  
       with:
         submodules: true
-
-    - name: Install Ruby Dev                     
-      run: sudo apt-get install ruby-dev
-
-    - name: Install AsciiDoctor and Rouge
-      run: sudo gem install asciidoctor rouge
-
+        fetch-depth: 0
+        
     - name: Setup Hugo                           
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: '0.71.1'
+        hugo-version: 'latest'
         extended: true
 
-    - name: Build                                
-      run: hugo
+    - name: Build
+      run: hugo --minify
 
     - name: Deploy                               
-      uses: peaceiris/actions-gh-pages@v2
+      uses: peaceiris/actions-gh-pages@v3
       env:
-        PERSONAL_TOKEN: ${{ secrets.TOKEN }}
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./docs 
